index.css
@charset "utf-8";
/* CSS Document */
/* Body */
body {
	overflow: hidden;
}

/* Logo */
.logo {
	background-image: url(logo/2048.png);
    background-size: 100% 100%;
}
.logo-animated {	
	background-image: url(logo/1024.apng);
    background-size: 100% 100%;
}

/* Home page */
#home-table {
	width: 100%;
	height: 100%;
}
#home-table table {
	width: 75vmin;
	height: 75vmin;
	table-layout: fixed;
	border-collapse: collapse;
}
#home-table tr {
	height: 33%;
}
#home-table td {
	width: 33%;
	padding: 0;
	margin: 0;
}
#home-table img {
	max-width: 100%;
	max-height: 100%;
}

/* Bio */
#bio {
	display: flex;
	flex-direction: column;
	align-content: center;
	align-items: center;
	width: 100%;
	height: 100%;
}
#bio .quote {
	width: 50vw;
	text-align: justify;
}
#bio .author {
	text-align: right;
}
#bio table {
	width: 50vw;
	height: auto;
	table-layout: fixed;
	border-collapse: collapse;
}
#bio table td {
	width: 33%;
	padding: 0;
	margin: 0;
}
#bio table img {
	max-width: 100%;
	max-height: 100%;
}

